--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:dn4GJ5q331eqg5uvQD6Hp1o/fQ6bpw5YmDvU6DZlFuo=
 APP_DEBUG=true
+APP_URL=http://127.0.0.1:8000/
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
